<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map"
    android:backgroundTint="@color/bg"
    tools:context=".MainActivity">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp"
        android:paddingBottom="30dp"
        android:orientation="vertical"
        android:weightSum="6"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/religion"
        android:padding="15dp"
        android:text="@string/b1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/texcolor"
        android:textStyle="bold"
        android:textSize="@dimen/textsizw"
        android:background="@drawable/shapeofbutton"
        android:layout_gravity="center"

        />
       <!-- <Button
            android:id="@+id/nationaloccasionholiday"
            android:layout_marginTop="10dp"
            android:text="@string/b2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="15dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@color/texcolor"
            android:textStyle="bold"
            android:textSize="@dimen/textsizw"
            android:background="@drawable/shapeofbutton"
            />-->
        <Button
            android:id="@+id/attire"
            android:layout_marginTop="10dp"
            android:text="@string/b6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="15dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@color/texcolor"
            android:textStyle="bold"
            android:textSize="@dimen/textsizw"
            android:background="@drawable/shapeofbutton"
            />
        <Button
            android:id="@+id/season"
            android:layout_marginTop="10dp"
            android:text="@string/b3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:layout_gravity="center"
            android:textColor="@color/texcolor"
            android:textStyle="bold"
            android:textSize="@dimen/textsizw"
            android:background="@drawable/shapeofbutton"
            />
        <Button
            android:id="@+id/hospitality"
            android:layout_marginTop="10dp"
            android:text="@string/b4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center"
            android:textColor="@color/texcolor"
            android:textStyle="bold"
            android:textSize="@dimen/textsizw"
            android:background="@drawable/roundshape"
            />


        <Button
            android:id="@+id/food"
            android:layout_marginTop="10dp"
            android:text="@string/b5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:layout_gravity="center"
            android:textColor="@color/texcolor"
            android:textStyle="bold"
            android:textSize="@dimen/textsizw"
            android:background="@drawable/shapeofbutton"
            />

        <Button
            android:id="@+id/historicaltspots"
            android:layout_marginTop="10dp"
            android:text="@string/b7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:layout_gravity="center"
            android:textColor="@color/texcolor"
            android:textStyle="bold"
            android:textSize="@dimen/textsizw"
            android:background="@drawable/shapeofbutton"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>